@@ -1,4 +1,6 @@
 unreleased
+-   fixed/implemented nuke
 -   new card: Peacefully Efficiency
 -   space stations auto buyer
+-   rebalanced nuke and components
 -   added changelog
